[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["Dan Chalmers <dan@danchalmers.me.uk>"]
readme = "README.md"
packages = [{include = "advent_of_code_2022"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^6.0.0"
pytest-order = "^1.0.1"
isort = "^5.10.1"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
